--- a/privacy.html
+++ b/privacy.html
@@ -111,11 +111,10 @@
 
     <div class="container-fluid container-xxl position-relative d-flex align-items-center justify-content-between">
 
-
-
         <div class="container  " style="margin-top: 80px;">
-            <h1 data-aos="fade-up" >PRIVACY POLICY</h1>
-            <p data-aos="fade-up">Thank you for selecting the Services offered by MYT (referred to as “we”, “our”, or “us”). Review these
+            <h1 data-aos="fade-up">PRIVACY POLICY</h1>
+            <p data-aos="fade-up">Thank you for selecting the Services offered by MYT (referred to as “we”, “our”, or
+                “us”). Review these
                 Terms
                 of Service (“Agreement”) thoroughly. This Agreement is a legal agreement between you and MYT. By
                 accepting
@@ -134,17 +133,20 @@
             <h3 data-aos="fade-up" data-aos-delay="100">GENERAL TERMS</h3>
             <ol>
                 <li data-aos="fade-up" data-aos-delay="150">AGREEMENT</li>
-                <p data-aos="fade-up" data-aos-delay="200">This Agreement describes the terms governing your use of the MYT services provided to you on this
+                <p data-aos="fade-up" data-aos-delay="200">This Agreement describes the terms governing your use of the
+                    MYT services provided to you on this
                     app,
                     including content and new releases, (collectively, the “Services”). It includes by reference:</p>
                 <ol type="a">
-                    <li data-aos="fade-up" data-aos-delay="250">MYT’s Privacy Policy provided to you in the Services available on the app or provided to you
+                    <li data-aos="fade-up" data-aos-delay="250">MYT’s Privacy Policy provided to you in the Services
+                        available on the app or provided to you
                         otherwise.</li>
                 </ol>
             </ol>
 
             <h3 data-aos="fade-up" data-aos-delay="100">YOUR RIGHTS TO USE THE SERVICES</h3>
-            <p data-aos="fade-up" data-aos-delay="200">2.1 The Services are protected by copyright, trade secret, and other intellectual property laws. You are
+            <p data-aos="fade-up" data-aos-delay="200">2.1 The Services are protected by copyright, trade secret, and
+                other intellectual property laws. You are
                 only
                 granted the right to use the Services and only for the purposes described by MYT. MYT reserves all other
                 rights in the Services. Until termination of this Agreement and a you meet any applicable obligations
@@ -152,22 +154,28 @@
                 comply with this Agreement, MYT grants to you a personal, limited, non-exclusive, non-transferable right
                 and
                 license to use the Services.</p>
-            <p data-aos="fade-up" data-aos-delay="250">2.2 You agree not to use, nor permit any third party to use the Services or content in a manner that
+            <p data-aos="fade-up" data-aos-delay="250">2.2 You agree not to use, nor permit any third party to use the
+                Services or content in a manner that
                 violates
                 any applicable law, regulation or this Agreement. You agree you will not:</p>
             <ol>
-                <li data-aos="fade-up" data-aos-delay="300">Provide access to or give any part of the Services to any unauthorized third party.</li>
-                <li data-aos="fade-up" data-aos-delay="350">Reproduce, modify, copy, deconstruct, sell, trade or resell the Services.</li>
-                <li data-aos="fade-up" data-aos-delay="400">Make the Services available on any file-sharing or application hosting service.</li>
+                <li data-aos="fade-up" data-aos-delay="300">Provide access to or give any part of the Services to any
+                    unauthorized third party.</li>
+                <li data-aos="fade-up" data-aos-delay="350">Reproduce, modify, copy, deconstruct, sell, trade or resell
+                    the Services.</li>
+                <li data-aos="fade-up" data-aos-delay="400">Make the Services available on any file-sharing or
+                    application hosting service.</li>
             </ol>
 
             <h3 data-aos="fade-up" data-aos-delay="100">PAYMENT</h3>
-            <p data-aos="fade-up" data-aos-delay="200">For Services offered on a payment or subscription basis, the following terms apply if you are the User
+            <p data-aos="fade-up" data-aos-delay="200">For Services offered on a payment or subscription basis, the
+                following terms apply if you are the User
                 paying
                 for the Services, unless MYT. This Agreement also incorporates by reference and includes program
                 ordering
                 and payment terms provided to you on the website for the Services:</p>
-            <p data-aos="fade-up" data-aos-delay="250">Payments will be billed to you by MYT in pounds sterling (£), U.S. Dollars, or other currencies which may
+            <p data-aos="fade-up" data-aos-delay="250">Payments will be billed to you by MYT in pounds sterling (£),
+                U.S. Dollars, or other currencies which may
                 be
                 made available (plus any and all applicable taxes, including without limitation VAT and GST) as shown in
                 the
@@ -179,34 +187,42 @@
             <ol>
                 <li data-aos="fade-up" data-aos-delay="350">A valid credit card acceptable to MYT;</li>
                 <li data-aos="fade-up" data-aos-delay="400">A valid debit card acceptable to MYT;</li>
-                <li data-aos="fade-up" data-aos-delay="450">Sufficient funds in a checking or savings account to cover an electronic debit of the payment due;
+                <li data-aos="fade-up" data-aos-delay="450">Sufficient funds in a checking or savings account to cover
+                    an electronic debit of the payment due;
                     or
                 </li>
-                <li data-aos="fade-up" data-aos-delay="500">By another payment option MYT provides to you in writing.</li>
+                <li data-aos="fade-up" data-aos-delay="500">By another payment option MYT provides to you in writing.
+                </li>
             </ol>
-            <p data-aos="fade-up" data-aos-delay="550">If your payment and registration information is not accurate, current, and complete and you do not notify
+            <p data-aos="fade-up" data-aos-delay="550">If your payment and registration information is not accurate,
+                current, and complete and you do not notify
                 us
                 promptly when such information changes, we may suspend or terminate your account and refuse your use of
                 the
                 Services.</p>
-            <p data-aos="fade-up" data-aos-delay="600">If you do not notify us of updates to your payment method (e.g., credit card expiration date), to avoid
+            <p data-aos="fade-up" data-aos-delay="600">If you do not notify us of updates to your payment method (e.g.,
+                credit card expiration date), to avoid
                 interruption of your service, we may participate in programs supported by your card provider (e.g.,
                 updater
                 services, recurring billing programs, etc.) to try to update your payment information, and you authorize
                 us
                 to continue billing your account with the updated information that we obtain.</p>
-            <p data-aos="fade-up" data-aos-delay="650">MYT will automatically renew your monthly, at the then-current rates, unless the Services are cancelled
+            <p data-aos="fade-up" data-aos-delay="650">MYT will automatically renew your monthly, at the then-current
+                rates, unless the Services are cancelled
                 or
                 terminated under this Agreement.</p>
-            <p data-aos="fade-up" data-aos-delay="700">Additional cancellation or renewal terms may be provided to you on the website for the Services.</p>
+            <p data-aos="fade-up" data-aos-delay="700">Additional cancellation or renewal terms may be provided to you
+                on the website for the Services.</p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">USE WITH YOUR MOBILE DEVICE</h3>
-            <p data-aos="fade-up" data-aos-delay="200">Use of these Services through a compatible mobile device may require software. You agree that you are
+            <p data-aos="fade-up" data-aos-delay="200">Use of these Services through a compatible mobile device may
+                require software. You agree that you are
                 solely
                 responsible for these requirements, including any applicable changes, updates and fees as well as the
                 terms
                 of your agreement with your mobile device and telecommunications provider.</p>
-            <p data-aos="fade-up" data-aos-delay="250">If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of agreement
+            <p data-aos="fade-up" data-aos-delay="250">If you’re using the app outside of an area with Wi-Fi, you should
+                remember that your terms of agreement
                 with
                 your mobile network provider will still apply. As a result, you may be charged by your mobile provider
                 for
@@ -219,7 +235,8 @@
             </p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">YOUR PERSONAL INFORMATION</h3>
-            <p data-aos="fade-up" data-aos-delay="200">You can view MYT’s Privacy Policy provided with the Services. You agree to the applicable MYT Privacy
+            <p data-aos="fade-up" data-aos-delay="200">You can view MYT’s Privacy Policy provided with the Services. You
+                agree to the applicable MYT Privacy
                 Policy
                 and any changes published by MYT. You agree that MYT may use and maintain your data according to the MYT
                 Privacy Policy as part of the Services. You give MYT permission to combine identifiable and
@@ -231,7 +248,8 @@
                 the Services.</p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">CONTENT</h3>
-            <p data-aos="fade-up" data-aos-delay="200">5.1 You are responsible for your content. You are responsible for all materials, data and personal
+            <p data-aos="fade-up" data-aos-delay="200">5.1 You are responsible for your content. You are responsible for
+                all materials, data and personal
                 information (“Content“) uploaded, posted or stored through your use of the Services. You are responsible
                 for
                 any lost or unrecoverable Content. You must provide all required and appropriate warnings, information
@@ -241,33 +259,39 @@
                 to use nor permit any third party to use the Services to upload, post, distribute, link to, publish,
                 reproduce, engage in or transmit any of the following, including but not limited to:</p>
             <ol>
-                <li data-aos="fade-up" data-aos-delay="250">Illegal, fraudulent, defamatory, obscene, profane, threatening, abusive, hateful, harassing,
+                <li data-aos="fade-up" data-aos-delay="250">Illegal, fraudulent, defamatory, obscene, profane,
+                    threatening, abusive, hateful, harassing,
                     offensive,
                     inappropriate or objectionable information or communications of any kind, including without
                     limitation
                     conduct that would encourage “flaming” others, or criminal or civil liability under any local,
                     state,
                     federal or foreign law;</li>
-                <li data-aos="fade-up" data-aos-delay="300">Content that would impersonate someone else or falsely represent your identity or qualifications, or
+                <li data-aos="fade-up" data-aos-delay="300">Content that would impersonate someone else or falsely
+                    represent your identity or qualifications, or
                     that constitutes a breach of any individual’s privacy</li>
             </ol>
-            <p data-aos="fade-up" data-aos-delay="350">The MYT app stores and processes all your personal data that you have provided to us so that we can deal
+            <p data-aos="fade-up" data-aos-delay="350">The MYT app stores and processes all your personal data that you
+                have provided to us so that we can deal
                 with
                 your accounts. It’s your responsibility to keep your phone and access to the app secure. We therefore
                 recommend that you do not jailbreak or root your phone, which is the process of removing software
                 restrictions and limitations imposed by the official operating system of your device. It could make your
                 phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it
                 could mean that the MYT app won’t work properly or at all.</p>
-            <p data-aos="fade-up" data-aos-delay="400">5.2 MYT may monitor your Content. We may disclose any information necessary to satisfy our legal
+            <p data-aos="fade-up" data-aos-delay="400">5.2 MYT may monitor your Content. We may disclose any information
+                necessary to satisfy our legal
                 obligations,
                 protect MYT or its customers or operate the Services properly.</p>
-            <p data-aos="fade-up" data-aos-delay="450">5.3 You will manage your passwords and accept updates. You are responsible for securely managing your
+            <p data-aos="fade-up" data-aos-delay="450">5.3 You will manage your passwords and accept updates. You are
+                responsible for securely managing your
                 password(s) for the Services and to contact MYT if you become aware of any unauthorized access to your
                 account. The Services may be periodically updated with tools, utilities, improvements, third party
                 applications or any general updates to improve the Services. You agree to receive these updates.</p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">DISCLAIMER OF WARRANTIES</h3>
-            <p data-aos="fade-up" data-aos-delay="200">6.1 Your use of the services, software, and content is entirely at your own risk. Except as described in
+            <p data-aos="fade-up" data-aos-delay="200">6.1 Your use of the services, software, and content is entirely
+                at your own risk. Except as described in
                 this
                 agreement, the services are provided “as is.” To the maximum extent permitted by applicable law, MYT,
                 its
@@ -279,7 +303,8 @@
                 secure, free from bugs, viruses, interruption, errors, theft or destruction.</p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">LIMITATION OF LIABILITY AND INDEMNITY</h3>
-            <p data-aos="fade-up" data-aos-delay="200">To the maximum extent permitted by applicable law, the entire liability of MYT, for all claims relating
+            <p data-aos="fade-up" data-aos-delay="200">To the maximum extent permitted by applicable law, the entire
+                liability of MYT, for all claims relating
                 to
                 this agreement shall be limited to the amount you paid for the services during the twelve (12) months
                 prior
@@ -303,7 +328,8 @@
                 misrepresentation; (III) any other liability which cannot be lawfully excluded by contractual agreement
                 of
                 the parties.</p>
-            <p data-aos="fade-up" data-aos-delay="250">You agree to indemnify and hold MYT and its affiliates and suppliers harmless from any and all claims,
+            <p data-aos="fade-up" data-aos-delay="250">You agree to indemnify and hold MYT and its affiliates and
+                suppliers harmless from any and all claims,
                 liability and expenses, including reasonable attorneys’ fees and costs, arising out of your use of the
                 services or breach of this agreement (collectively referred to as “Claims”). MYT reserves the right, in
                 its
@@ -312,7 +338,8 @@
                 to reasonably cooperate as requested by Intuit in the defence of any Claims.</p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">COMPLIANCE WITH PRESERVATION ORDERS</h3>
-            <p data-aos="fade-up" data-aos-delay="200">MYT accepts no liability to you under this Agreement, or otherwise at law, for compliance by MYT with any
+            <p data-aos="fade-up" data-aos-delay="200">MYT accepts no liability to you under this Agreement, or
+                otherwise at law, for compliance by MYT with any
                 order or notice, whether issued to MYT or to you, and whether issued by any court, tribunal, regulatory
                 authority, arbitral tribunal or any body or authority exercising judicial, quasi-judicial, regulatory,
                 or
@@ -322,7 +349,8 @@
                 you are solely responsible for your compliance with it.</p>
 
             <h3 data-aos="fade-up" data-aos-delay="100">GOVERNING LAW AND JURISDICTION</h3>
-            <p data-aos="fade-up" data-aos-delay="200">This Agreement will be governed by the laws of England and Wales without regard to its conflicts of law
+            <p data-aos="fade-up" data-aos-delay="200">This Agreement will be governed by the laws of England and Wales
+                without regard to its conflicts of law
                 principles. Notwithstanding the foregoing, you acknowledge that your breach (or an apprehension of
                 breach)
                 of any provisions of this Agreement, or any infringement (or apprehension of infringement) of MYT’s or
